--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,8 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="icon" type="image/svg+xml" href="/hand-stop.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>STOP! DataBase</title>
@@ -10,7 +11,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
+  <script type="module" src="./src/main.tsx"></script>
 </body>
 
 </html>
